--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "eslint-config-prettier": "^6.7.0",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
@@ -35,7 +36,9 @@
       "airbnb",
       "prettier"
     ],
-    "rules": {},
+    "rules": {
+      "vue/html-no-self-closing": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
