--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.4.3",
     "eslint-config-prettier": "^6.7.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -20,7 +21,6 @@
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-vue": "^6.0.1",
     "vue-template-compiler": "^2.6.10"
