동적 param router 적용 연습

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       "prettier"
     ],
     "rules": {
-      "vue/html-no-self-closing": "off"
+      "vue/html-no-self-closing": "on"
     },
     "parserOptions": {
       "parser": "babel-eslint"
